Added Profile Picture

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="header">
 			<div class="row header-content">
 				<div class="col-sm-2">
-					<img src="http://lorempixel.com/200/200/" alt="Profile Picture" class="img-responsive display-pic"></img>
+					<img src="image/my-pic.jpg" alt="Profile Picture" class="img-responsive display-pic"></img>
 				</div>
 				<div class="col-sm-10 hidden-xs">
 					<h1 class="main-heading"> Kalyani Kirad</h1>
