--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 				</div>
 			</div>	
 		</div>
+		<hr>
 		<div>
 			<h1>SKILL SET</h1>
 			<div class="row">
@@ -78,6 +79,72 @@
 		        </div>
 		    </div>    
 		</div>
+		<hr>
+		<div>
+			<h1> CURRICULUM VITAE</h1>
+			<div class="row">
+				<div class="col-sm-3">
+					<h3 class="header-light">EDUCATION</h3>
+				</div>
+				<div class="col-sm-9">
+					<h3> MASTER OF COMPUTER APPLICATION</h3>
+					<h4 class="header-light"> University Of Pune  <span class="gray-block">3 years </span></h4> 
+					<h5> June 2012 - May 2015 </h5><hr>
+					<p>Completed MCA with 81% from MIT College Kothrud Pune Maharashtra India.<br>
+						Projects:
+						<ul>
+						<li>Sem II- Network White Board</li>
+						<li>Sem IV - Facial Recognition</li>
+						<li>Sem V - Online Practical Examination </li>
+						<li>Sem VI - Internship at Vertis Microsystems LLP Pune </li>
+						</ul>	
+					</p>
+					<br>	
+					<h3> BACHELOR OF COMPUTER SCIENCE</h3>
+					<h4 class="header-light"> University Of Pune  <span class="gray-block">3 years </span></h4> 
+					<h5> June 2009 - May 2012 </h5>
+					<hr>
+					<p>Completed BSC(Computer Science) with 73% from St Mira's College Pune Maharashtra India.<br>
+						Projects:
+						<ul>
+							<li>Sem III - Tours & Travels Management</li>
+							<li>Sem V - Message Storage Management</li>
+						</ul>	
+					</p>
+					<br>			
+				</div> 
+			</div>
+			<div class="row">
+				<div class="col-sm-3">
+					<h3 class="header-light">WORK EXPERIENCE</h3>
+				</div>
+				<div class="col-sm-9">
+					<h3> INTERNSHIP </h3>
+					<h4 class="header-light"> Vertis Microsystems LLP </h4> 
+					<h5> September 2014 - June 2015 </h5>
+					<hr>
+					<p>Worked as a QA Engineer. <br>
+					Responsibilities:
+					<ul>
+						<li> Manual Testing. </li>
+						<li> Automation Testing Using Core Java & Selenium. </li>
+					</ul>
+					</p>
+					<h3> SOFTWARE ENGINEER </h3>
+					<h4 class="header-light"> Vertis Microsystems LLP </h4> 
+					<h5> August 2015 - Present </h5>
+					<hr>
+					<p>Worked as a ROR  Developer. <br>
+					Responsibilities:
+					<ul>
+						<li> Full Stack Web Development using Ruby and BackBone JS. </li>
+						<li> Providing Support to the client. </li>
+						<li> Creating and Deploying Patches.</li>
+					</ul>
+					</p>					
+				</div>
+			</div>
+		</div>	
 	</div>
 	<script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="bower_components/d3/d3.min.js" type="text/javascript" charset="utf-8"></script>
