--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Kalyani Kirad</title>
 	<link rel="stylesheet" type="text/css" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./bower_components/font-awesome/css/font-awesome.css">
 	<link href='https://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="bower_components/c3/c3.min.css">
 </head>
@@ -20,10 +21,39 @@
 				<div class="col-sm-10 hidden-xs">
 					<h1 class="main-heading"> Kalyani Kirad</h1>
 					<h3 class="sub-heading"> Full Stack Web Developer </h3>
+		  			<div class="row">	
+		  				<div class="col-sm-10 hidden-xs social-icons">
+			  				<a href="https://www.facebook.com/kalyani.kirad">
+			  					<img class="img-responsive margin-class" height="30" width="30" src="./image/facebook-icon-png.png"> 
+			  				</a>
+			  				<a  href="https://in.linkedin.com/in/kalyani-kirad-b43846aa">
+			    				<img src="./image/linkden.jpg" height="30" width="30" class="img-responsive margin-class linkden-icon"></span>
+			  				</a>
+			  				<a href="https://github.com/KKirad">
+			    				<img src="./image/github2.png" height="30" width="30" class="img-responsive margin-class github-icon"></span>
+			  				</a>
+		  				</div>
+		  			</div> 	
 				</div>
 				<div class="col-xs-12 hidden-sm hidden-md hidden-lg text-center">
 					<h1 class="main-heading"> Kalyani Kirad</h1>
 					<h3 class="sub-heading"> Full Stack Web Developer </h3>
+					<div class="row">
+						<div class="social-icons col-xs-7 col-xs-md-5 hidden-md hidden-lg pull-right">
+			  				<a href="https://www.facebook.com/kalyani.kirad">
+			  					<img class="img-responsive margin-class" height="30" width="30" src="./image/facebook-icon-png.png"> 
+			  				</a>
+			  				<a  href="https://in.linkedin.com/in/kalyani-kirad-b43846aa">
+			    				<img src="./image/linkden.jpg" height="30" width="30" class="img-responsive margin-class linkden-icon"></span>
+			  				</a>
+			  				<a href="https://github.com/KKirad">
+			    				<img src="./image/github2.png" height="30" width="30" class="img-responsive margin-class github-icon"></span>
+			  				</a>
+	  					</div>
+	  				</div>	
+				</div>
+				<div>
+					
 				</div>
 			</div>
 		</div>
