Aligned the social icons in the center

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 				<div class="col-sm-10 hidden-xs">
 					<h1 class="main-heading"> Kalyani Kirad</h1>
 					<h3 class="sub-heading"> Full Stack Web Developer </h3>
-		  			<div class="row">	
+		  			<div class="row">
 		  				<div class="col-sm-10 hidden-xs social-icons">
 			  				<a href="https://www.facebook.com/kalyani.kirad">
-			  					<img class="img-responsive margin-class" height="30" width="30" src="./image/facebook-icon-png.png"> 
+			  					<img class="img-responsive margin-class" height="30" width="30" src="./image/facebook-icon-png.png">
 			  				</a>
 			  				<a  href="https://in.linkedin.com/in/kalyani-kirad-b43846aa">
 			    				<img src="./image/linkden.jpg" height="30" width="30" class="img-responsive margin-class linkden-icon"></span>
@@ -33,15 +33,15 @@
 			    				<img src="./image/github2.png" height="30" width="30" class="img-responsive margin-class github-icon"></span>
 			  				</a>
 		  				</div>
-		  			</div> 	
+		  			</div>
 				</div>
 				<div class="col-xs-12 hidden-sm hidden-md hidden-lg text-center">
 					<h1 class="main-heading"> Kalyani Kirad</h1>
 					<h3 class="sub-heading"> Full Stack Web Developer </h3>
 					<div class="row">
-						<div class="social-icons col-xs-7 col-xs-md-5 hidden-md hidden-lg pull-right">
+						<div class="social-icons col-xs-8 col-xs-offset-4 hidden-md hidden-lg">
 			  				<a href="https://www.facebook.com/kalyani.kirad">
-			  					<img class="img-responsive margin-class" height="30" width="30" src="./image/facebook-icon-png.png"> 
+			  					<img class="img-responsive margin-class" height="30" width="30" src="./image/facebook-icon-png.png">
 			  				</a>
 			  				<a  href="https://in.linkedin.com/in/kalyani-kirad-b43846aa">
 			    				<img src="./image/linkden.jpg" height="30" width="30" class="img-responsive margin-class linkden-icon"></span>
@@ -50,10 +50,10 @@
 			    				<img src="./image/github2.png" height="30" width="30" class="img-responsive margin-class github-icon"></span>
 			  				</a>
 	  					</div>
-	  				</div>	
+	  				</div>
 				</div>
 				<div>
-					
+
 				</div>
 			</div>
 		</div>
@@ -64,7 +64,7 @@
 					<div class="about-content">
 						<h4>FULL NAME</h4>
 						<h5> KALYANI SHRIKANT KIRAD </h5>
-					</div>						
+					</div>
 				</div>
 				<div class="col-sm-4">
 					<div class="about-content">
@@ -84,7 +84,7 @@
 					<div class="about-content">
 						<h4>RESIDENCE</h4>
 						<h5>PUNE INDIA</h5>
-					</div>						
+					</div>
 				</div>
 				<div class="col-sm-4">
 					<div class="about-content">
@@ -98,7 +98,7 @@
 						<h5>DANCING, EXPLORING NEW PLACES</h5>
 					</div>
 				</div>
-			</div>	
+			</div>
 		</div>
 		<hr>
 		<div>
@@ -107,7 +107,7 @@
 				<div class="col-sm-12">
 					<div id="chart_bar"></div>
 		        </div>
-		    </div>    
+		    </div>
 		</div>
 		<hr>
 		<div>
@@ -118,7 +118,7 @@
 				</div>
 				<div class="col-sm-9">
 					<h3> MASTER OF COMPUTER APPLICATION</h3>
-					<h4 class="header-light"> University Of Pune  <span class="gray-block">3 years </span></h4> 
+					<h4 class="header-light"> University Of Pune  <span class="gray-block">3 years </span></h4>
 					<h5> June 2012 - May 2015 </h5><hr>
 					<p>Completed MCA with 81% from MIT College Kothrud Pune Maharashtra India.<br>
 						Projects:
@@ -127,11 +127,11 @@
 						<li>Sem IV - Facial Recognition</li>
 						<li>Sem V - Online Practical Examination </li>
 						<li>Sem VI - Internship at Vertis Microsystems LLP Pune </li>
-						</ul>	
+						</ul>
 					</p>
-					<br>	
+					<br>
 					<h3> BACHELOR OF COMPUTER SCIENCE</h3>
-					<h4 class="header-light"> University Of Pune  <span class="gray-block">3 years </span></h4> 
+					<h4 class="header-light"> University Of Pune  <span class="gray-block">3 years </span></h4>
 					<h5> June 2009 - May 2012 </h5>
 					<hr>
 					<p>Completed BSC(Computer Science) with 73% from St Mira's College Pune Maharashtra India.<br>
@@ -139,10 +139,10 @@
 						<ul>
 							<li>Sem III - Tours & Travels Management</li>
 							<li>Sem V - Message Storage Management</li>
-						</ul>	
+						</ul>
 					</p>
-					<br>			
-				</div> 
+					<br>
+				</div>
 			</div>
 			<div class="row">
 				<div class="col-sm-3">
@@ -150,7 +150,7 @@
 				</div>
 				<div class="col-sm-9">
 					<h3> INTERNSHIP </h3>
-					<h4 class="header-light"> Vertis Microsystems LLP </h4> 
+					<h4 class="header-light"> Vertis Microsystems LLP </h4>
 					<h5> September 2014 - June 2015 </h5>
 					<hr>
 					<p>Worked as a QA Engineer. <br>
@@ -161,7 +161,7 @@
 					</ul>
 					</p>
 					<h3> SOFTWARE ENGINEER </h3>
-					<h4 class="header-light"> Vertis Microsystems LLP </h4> 
+					<h4 class="header-light"> Vertis Microsystems LLP </h4>
 					<h5> August 2015 - Present </h5>
 					<hr>
 					<p>Worked as a ROR  Developer. <br>
@@ -171,14 +171,14 @@
 						<li> Providing Support to the client. </li>
 						<li> Creating and Deploying Patches.</li>
 					</ul>
-					</p>					
+					</p>
 				</div>
 			</div>
-		</div>	
+		</div>
 	</div>
 	<script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="bower_components/d3/d3.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="bower_components/c3/c3.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="script.js" type="text/javascript" charset="utf-8"></script>	
+	<script src="script.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
