Added few css changes

--- a/index.html
+++ b/index.html
@@ -38,22 +38,17 @@
 				<div class="col-xs-12 hidden-sm hidden-md hidden-lg text-center">
 					<h1 class="main-heading"> Kalyani Kirad</h1>
 					<h3 class="sub-heading"> Full Stack Web Developer </h3>
-					<div class="row">
-						<div class="social-icons col-xs-8 col-xs-offset-4 hidden-md hidden-lg">
-			  				<a href="https://www.facebook.com/kalyani.kirad">
-			  					<img class="img-responsive margin-class" height="30" width="30" src="./image/facebook-icon-png.png">
-			  				</a>
-			  				<a  href="https://in.linkedin.com/in/kalyani-kirad-b43846aa">
-			    				<img src="./image/linkden.jpg" height="30" width="30" class="img-responsive margin-class linkden-icon"></span>
-			  				</a>
-			  				<a href="https://github.com/KKirad">
-			    				<img src="./image/github2.png" height="30" width="30" class="img-responsive margin-class github-icon"></span>
-			  				</a>
-	  					</div>
-	  				</div>
-				</div>
-				<div>
-
+					<div class="social-icons social-icons-small-screen">
+			  		<a href="https://www.facebook.com/kalyani.kirad">
+			  			<img class="img-responsive margin-class" height="30" width="30" src="./image/facebook-icon-png.png" alt="Facebook">
+			  		</a>
+			  		<a  href="https://in.linkedin.com/in/kalyani-kirad-b43846aa">
+			    		<img src="./image/linkden.jpg" height="30" width="30" class="img-responsive margin-class linkden-icon" alt="Linkedin"></span>
+			  		</a>
+			  		<a href="https://github.com/KKirad">
+			    		<img src="./image/github2.png" height="30" width="30" class="img-responsive margin-class github-icon" alt="Github"></span>
+			  		</a>
+	  			</div>
 				</div>
 			</div>
 		</div>
