--- a/index.html
+++ b/index.html
@@ -21,34 +21,34 @@
 				<div class="col-sm-10 hidden-xs">
 					<h1 class="main-heading"> Kalyani Kirad</h1>
 					<h3 class="sub-heading"> Full Stack Web Developer </h3>
-		  			<div class="row">
-		  				<div class="col-sm-10 hidden-xs social-icons">
-			  				<a href="https://www.facebook.com/kalyani.kirad">
-			  					<img class="img-responsive margin-class" height="30" width="30" src="./image/facebook-icon-png.png">
-			  				</a>
-			  				<a  href="https://in.linkedin.com/in/kalyani-kirad-b43846aa">
-			    				<img src="./image/linkden.jpg" height="30" width="30" class="img-responsive margin-class linkden-icon"></span>
-			  				</a>
-			  				<a href="https://github.com/KKirad">
-			    				<img src="./image/github2.png" height="30" width="30" class="img-responsive margin-class github-icon"></span>
-			  				</a>
-		  				</div>
-		  			</div>
+					<div class="row">
+						<div class="col-sm-10 hidden-xs social-icons">
+							<a href="https://www.facebook.com/kalyani.kirad">
+								<img class="img-responsive margin-class" height="30" width="30" src="./image/facebook-icon-png.png">
+							</a>
+							<a  href="https://in.linkedin.com/in/kalyani-kirad-b43846aa">
+								<img src="./image/linkden.jpg" height="30" width="30" class="img-responsive margin-class linkden-icon"></span>
+							</a>
+							<a href="https://github.com/KKirad">
+								<img src="./image/github2.png" height="30" width="30" class="img-responsive margin-class github-icon"></span>
+							</a>
+						</div>
+					</div>
 				</div>
 				<div class="col-xs-12 hidden-sm hidden-md hidden-lg text-center">
 					<h1 class="main-heading"> Kalyani Kirad</h1>
 					<h3 class="sub-heading"> Full Stack Web Developer </h3>
 					<div class="social-icons social-icons-small-screen">
-			  		<a href="https://www.facebook.com/kalyani.kirad">
-			  			<img class="img-responsive margin-class" height="30" width="30" src="./image/facebook-icon-png.png" alt="Facebook">
-			  		</a>
-			  		<a  href="https://in.linkedin.com/in/kalyani-kirad-b43846aa">
-			    		<img src="./image/linkden.jpg" height="30" width="30" class="img-responsive margin-class linkden-icon" alt="Linkedin"></span>
-			  		</a>
-			  		<a href="https://github.com/KKirad">
-			    		<img src="./image/github2.png" height="30" width="30" class="img-responsive margin-class github-icon" alt="Github"></span>
-			  		</a>
-	  			</div>
+						<a href="https://www.facebook.com/kalyani.kirad">
+							<img class="img-responsive margin-class" height="30" width="30" src="./image/facebook-icon-png.png" alt="Facebook">
+						</a>
+						<a  href="https://in.linkedin.com/in/kalyani-kirad-b43846aa">
+							<img src="./image/linkden.jpg" height="30" width="30" class="img-responsive margin-class linkden-icon" alt="Linkedin"></span>
+						</a>
+						<a href="https://github.com/KKirad">
+							<img src="./image/github2.png" height="30" width="30" class="img-responsive margin-class github-icon" alt="Github"></span>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -101,8 +101,8 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<div id="chart_bar"></div>
-		        </div>
-		    </div>
+				</div>
+			</div>
 		</div>
 		<hr>
 		<div>
@@ -116,13 +116,6 @@
 					<h4 class="header-light"> University Of Pune  <span class="gray-block">3 years </span></h4>
 					<h5> June 2012 - May 2015 </h5><hr>
 					<p>Completed MCA with 81% from MIT College Kothrud Pune Maharashtra India.<br>
-						Projects:
-						<ul>
-						<li>Sem II- Network White Board</li>
-						<li>Sem IV - Facial Recognition</li>
-						<li>Sem V - Online Practical Examination </li>
-						<li>Sem VI - Internship at Vertis Microsystems LLP Pune </li>
-						</ul>
 					</p>
 					<br>
 					<h3> BACHELOR OF COMPUTER SCIENCE</h3>
@@ -130,11 +123,6 @@
 					<h5> June 2009 - May 2012 </h5>
 					<hr>
 					<p>Completed BSC(Computer Science) with 73% from St Mira's College Pune Maharashtra India.<br>
-						Projects:
-						<ul>
-							<li>Sem III - Tours & Travels Management</li>
-							<li>Sem V - Message Storage Management</li>
-						</ul>
 					</p>
 					<br>
 				</div>
@@ -148,27 +136,152 @@
 					<h4 class="header-light"> Vertis Microsystems LLP </h4>
 					<h5> September 2014 - June 2015 </h5>
 					<hr>
-					<p>Worked as a QA Engineer. <br>
-					Responsibilities:
-					<ul>
-						<li> Manual Testing. </li>
-						<li> Automation Testing Using Core Java & Selenium. </li>
-					</ul>
-					</p>
 					<h3> SOFTWARE ENGINEER </h3>
-					<h4 class="header-light"> Vertis Microsystems LLP </h4>
+					<h4 class="header-light"> Forgeahead Solutions </h4>
 					<h5> August 2015 - Present </h5>
 					<hr>
-					<p>Worked as a ROR  Developer. <br>
-					Responsibilities:
-					<ul>
-						<li> Full Stack Web Development using Ruby and BackBone JS. </li>
-						<li> Providing Support to the client. </li>
-						<li> Creating and Deploying Patches.</li>
-					</ul>
-					</p>
 				</div>
 			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-3">
+				<h3 class="header-light">PROJECT UNDERTAKEN</h3>
+			</div>
+			<h4 class="header-light">TECHNICAL UNITED TRANSIT SYSTEM </h4>
+			<h5> 16 months </h5>
+			<div class="col-sm-offset-3 col-sm-9">
+				<h5 class="header-light"> Ruby on Rails, Backbone Js, Oracle,
+					Gilmour Microservices, Google Map API, Location Monitor.
+				</h5>
+				<p>This project is a tracking system for transit trucks
+					that enables the monitoring of cargo and vehicles
+					through a GPS device and associated electronic locks
+					to ensure the integrity of the shipment while
+					travelling through the country from the time of entry
+					till it exits the right designating border points. The
+					system provide the capability to track transit trucks
+					from border to border and notify of any violations to
+					make sure it will maintain the planned course and
+					secure the cargo while in the country.
+				</p>
+				<p class="header-light">Roles and Responsibilities<br>
+					<ul>
+						<li>Design and development of web
+							application software components
+							including both backend and frontend
+							code.
+						</li>
+						<li>Understanding and analyzing client
+							requirements and propose technical
+							solutions for the requirements.
+						</li>
+						<li>Analyzes, maintains and implements
+							(including performance tuning)
+							software applications and develops
+							programming specifications from
+							business requirements.
+						</li>
+						<li>Promotes automation,standardization, 
+							best practices and code reuse for the application
+							development.
+						</li>
+						<li>Deployment on Cloud services.</li>
+					</ul>
+				</p>
+			</div>
+		</div>
+		<div class="col-sm-offset-3 col-sm-9">
+			<h4 class="header-light">Essential Med: Medical & Health Insurance</h4>
+			<h5>6 months</h5>
+			<h5 class="header-light"> Ruby on Rails, Angularjs, jQuery, Ruby, Javascript,Postgres, Bootstrap.
+			</h5>
+			<p>The main objective of this project is to automate the
+				existing system of manually providing insurance
+				cover. It is used by the users to get the suitable cover
+				based on the budget provided by the user. Policy
+				registration can also be done.
+			</p>
+				<p class="header-light">Roles and Responsibilities<br>
+					<ul>
+						<li>Design and development of web
+							application software components
+							including both backend and frontend code.
+						</li>
+						<li>
+							Understanding and analyzing client
+							requirements and propose technical
+							solutions for the requirements.
+						</li>
+						<li>
+							Deployment on Cloud services.
+						</li>
+					</ul>
+				</p>
+		</div>
+		<div class="col-sm-offset-3 col-sm-9">
+			<h4 class="header-light">Essential Med: Doctor Search Application</h4>
+			<h5>6 months</h5>
+			<h5>Ruby on Rails, Angularjs, jQuery, Ruby, Javascript, Postgres, Bootstrap.</h5>
+			<p>Objective of this project is to search a doctor
+				(Dentist, General Practitioner) based on its Location
+				on the Map. User can apply various filter of Country,
+				City, Doctor Name, Practice Number to search for
+				the Doctor. Data for the doctors is uploaded through
+				CSV and then populated in the database and on
+				Google Map.
+			</p>
+				<p class="header-light">Roles and Responsibilities<br>
+					<ul>
+						<li>Design and development of web
+							application software components
+							including both backend and frontend code.
+						</li>
+						<li>
+							Understanding and analyzing client
+							requirements and propose technical
+							solutions for the requirements.
+						</li>
+						<li>
+							Deployment on Cloud services.
+						</li>
+					</ul>
+				</p>
+		</div>
+		<div class="col-sm-offset-3 col-sm-9">
+			<h4 class="header-light">Bravo TV</h4>
+			<h5>6 months</h5>
+			<h5 class="header-light"> Automation and Manual Testing </h5>
+			<p>Bravo is an American cable and satellite television
+					channel owned by NBC universal. It’s mainly
+					focused on programs regarding fine arts and
+					currently broadcasts reality shows. They have their
+					website originally in drupal 6 (content management
+					system) and now migrating the same in drupal 7.
+					Testing activities involved are manual testing of
+					behaviour of the website for ex. daily dish and cast
+					blog pages functionality, testing of playlists, social
+					sharing functionality, testing of various features and
+					UI of the website.
+			</p>
+				<p class="header-light">Roles and Responsibilities<br>
+					<ul>
+						<li>Writing automated test cases using
+							selenium web driver.
+						</li>
+						<li>
+							Writing and execution of manual test
+							cases for various functionality.
+						</li>
+						<li>
+							Performing UI, Functional and
+							Regression Testing.
+						</li>
+						<li>
+							Reporting, tracking and closure of
+							defects in Jira.
+						</li>
+					</ul>
+				</p>
 		</div>
 	</div>
 	<script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript" charset="utf-8"></script>
