--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@
 				<div class="col-sm-4">
 					<div class="about-content">
 						<h4>HOBBIES</h4>
-						<h5>DANCING, EXPLORING NEW PLACES</h5>
+						<h5>DANCING, EXPLORING NEW PLACES, TREKKING</h5>
 					</div>
 				</div>
 			</div>
 		</div>
 		<hr>
-		<div>
+		<!-- <div>
 			<h1>SKILL SET</h1>
 			<div class="row">
 				<div class="col-sm-12">
 					<div id="chart_bar"></div>
 				</div>
 			</div>
-		</div>
-		<hr>
+		</div> -->
+		<!-- <hr> -->
 		<div>
 			<h1> CURRICULUM VITAE</h1>
 			<div class="row">
@@ -138,7 +138,11 @@
 					<hr>
 					<h3> SOFTWARE ENGINEER </h3>
 					<h4 class="header-light"> Forgeahead Solutions </h4>
-					<h5> August 2015 - Present </h5>
+					<h5> August 2015 - September 2017 </h5>
+					<hr>
+					<h3> SOFTWARE ENGINEER </h3>
+					<h4 class="header-light"> Kumolus India Pvt Ltd </h4>
+					<h5> September 2017 - Present </h5>
 					<hr>
 				</div>
 			</div>
@@ -147,9 +151,41 @@
 			<div class="col-sm-3">
 				<h3 class="header-light">PROJECT UNDERTAKEN</h3>
 			</div>
+			<h4 class="header-light">Kumolus </h4>
+			<h5> 12 months </h5>
+			<div class="col-sm-offset-3 col-sm-9">
+				<h5 class="header-light"> Ruby on Rails, Angular JS, Amazon Web services, MongoDB, Redis, Postgres
+				</h5>
+				<p>With Kumolus Cloud Management Platform, you
+					can experience a simplified process of building a
+					cloud environment. That is because the software
+					provides you with a customary set of cloud resources
+					for you to complete a running environment in a
+					matter of minutes.
+					Moreover, Kumolus Cloud Management Platform
+					lets you optimize your cloud-related spending. The
+					application has a dashboard where you can view your
+					expenses for you to be able to stick to the budget
+				</p>
+				<p class="header-light">Roles and Responsibilities<br>
+					<ul>
+						<li>Design, build, and maintain efficient, reusable, and reliable Ruby code.
+						</li>
+						<li>Integration of user-facing elements developed by front-end developers with server side logic
+						</li>
+						<li>Help maintain code quality, organization and automatization.
+						</li>
+						<li>
+						Contributing in all phases of the development lifecycle</li>
+						<li>Deployment on Cloud services.</li>
+					</ul>
+				</p>
+			</div>
+		</div>
+		<div class="col-sm-offset-3 col-sm-9">
 			<h4 class="header-light">TECHNICAL UNITED TRANSIT SYSTEM </h4>
 			<h5> 16 months </h5>
-			<div class="col-sm-offset-3 col-sm-9">
+			<div class="col-sm-9">
 				<h5 class="header-light"> Ruby on Rails, Backbone Js, Oracle,
 					Gilmour Microservices, Google Map API, Location Monitor.
 				</h5>
