--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 					<img src="image/my-pic.jpg" alt="Profile Picture" class="img-responsive display-pic"></img>
 				</div>
 				<div class="col-sm-10 hidden-xs">
-					<h1 class="main-heading"> Kalyani Kirad</h1>
-					<h3 class="sub-heading"> Full Stack Web Developer </h3>
+					<h1 class="main-heading" style="color: black"> Kalyani Kirad</h1>
+					<h3 class="sub-heading" style="color: black"> Full Stack Web Developer </h3>
 					<div class="row">
 						<div class="col-sm-10 hidden-xs social-icons">
 							<a href="https://www.facebook.com/kalyani.kirad">
@@ -96,15 +96,89 @@
 			</div>
 		</div>
 		<hr>
-		<!-- <div>
+		<div>
 			<h1>SKILL SET</h1>
 			<div class="row">
-				<div class="col-sm-12">
-					<div id="chart_bar"></div>
+				<div class="col-sm-3">
+					<ul>
+						<li><h4>Ruby</h4></li>
+					</ul>
+					<!-- <div id="chart_bar"></div> -->
+				</div>
+				<div class="col-sm-3">
+					<ul>
+						<li><h4>Rails</h4></li>
+					</ul>
+					<!-- <div id="chart_bar"></div> -->
+				</div>
+				<div class="col-sm-3">
+					<ul>
+						<li><h4>HTML/CSS</h4></li>
+					</ul>
+					<!-- <div id="chart_bar"></div> -->
+				</div>
+				<div class="col-sm-3">
+					<ul>
+						<li><h4>JavaScript/ Backbone Js/ Angularjs</h4></li>
+					</ul>
+					<!-- <div id="chart_bar"></div> -->
 				</div>
 			</div>
-		</div> -->
-		<!-- <hr> -->
+		
+			<div class="row">
+				<div class="col-sm-3">
+					<ul>
+						<li><h4>MySql / Postgresql / Oracle</h4></li>
+					</ul>
+					<!-- <div id="chart_bar"></div> -->
+				</div>
+				<div class="col-sm-3">
+					<ul>
+						<li><h4>Mongo / Redis / Amazon Redshift</h4></li>
+					</ul>
+					<!-- <div id="chart_bar"></div> -->
+				</div>
+				<div class="col-sm-3">
+					<ul>
+						<li><h4>SQL / SQLite</h4></li>
+					</ul>
+					<!-- <div id="chart_bar"></div> -->
+				</div>
+				<div class="col-sm-3">
+					<ul>
+						<li><h4>AWS/Docker</h4></li>
+					</ul>
+					<!-- <div id="chart_bar"></div> -->
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-3">
+					<ul>
+						<li><h4>Advanced thinking</h4></li>
+					</ul>
+					<!-- <div id="chart_bar"></div> -->
+				</div>
+				<div class="col-sm-3">
+					<ul>
+						<li><h4>Project Management</h4></li>
+					</ul>
+					<!-- <div id="chart_bar"></div> -->
+				</div>
+				<div class="col-sm-3">
+					<ul>
+						<li><h4>Planning</h4></li>
+					</ul>
+					<!-- <div id="chart_bar"></div> -->
+				</div>
+				<div class="col-sm-3">
+					<ul>
+						<li><h4>Presenting</h4></li>
+					</ul>
+					<!-- <div id="chart_bar"></div> -->
+				</div>
+			</div>
+		</div>
+		<hr>
 		<div>
 			<h1> CURRICULUM VITAE</h1>
 			<div class="row">
@@ -112,6 +186,11 @@
 					<h3 class="header-light">EDUCATION</h3>
 				</div>
 				<div class="col-sm-9">
+					<h3> MBA - IT Project Management</h3>
+					<h4 class="header-light"> Welingkar Institute of Management  <span class="gray-block">2 years </span></h4>
+					<h5> Pursuing </h5><hr>
+					<p><br>
+					</p>
 					<h3> MASTER OF COMPUTER APPLICATION</h3>
 					<h4 class="header-light"> University Of Pune  <span class="gray-block">3 years </span></h4>
 					<h5> June 2012 - May 2015 </h5><hr>
@@ -152,7 +231,7 @@
 				<h3 class="header-light">PROJECT UNDERTAKEN</h3>
 			</div>
 			<h4 class="header-light">Kumolus </h4>
-			<h5> 12 months </h5>
+			<h5> 16 months </h5>
 			<div class="col-sm-offset-3 col-sm-9">
 				<h5 class="header-light"> Ruby on Rails, Angular JS, Amazon Web services, MongoDB, Redis, Postgres
 				</h5>
@@ -181,143 +260,143 @@
 					</ul>
 				</p>
 			</div>
-		</div>
-		<div class="col-sm-offset-3 col-sm-9">
-			<h4 class="header-light">TECHNICAL UNITED TRANSIT SYSTEM </h4>
-			<h5> 16 months </h5>
-			<div class="col-sm-9">
-				<h5 class="header-light"> Ruby on Rails, Backbone Js, Oracle,
-					Gilmour Microservices, Google Map API, Location Monitor.
-				</h5>
-				<p>This project is a tracking system for transit trucks
-					that enables the monitoring of cargo and vehicles
-					through a GPS device and associated electronic locks
-					to ensure the integrity of the shipment while
-					travelling through the country from the time of entry
-					till it exits the right designating border points. The
-					system provide the capability to track transit trucks
-					from border to border and notify of any violations to
-					make sure it will maintain the planned course and
-					secure the cargo while in the country.
-				</p>
-				<p class="header-light">Roles and Responsibilities<br>
-					<ul>
-						<li>Design and development of web
-							application software components
-							including both backend and frontend
-							code.
-						</li>
-						<li>Understanding and analyzing client
-							requirements and propose technical
-							solutions for the requirements.
-						</li>
-						<li>Analyzes, maintains and implements
-							(including performance tuning)
-							software applications and develops
-							programming specifications from
-							business requirements.
-						</li>
-						<li>Promotes automation,standardization, 
-							best practices and code reuse for the application
-							development.
-						</li>
-						<li>Deployment on Cloud services.</li>
-					</ul>
-				</p>
+			<div class="col-sm-offset-3 col-sm-9">
+				<h4 class="header-light">TECHNICAL UNITED TRANSIT SYSTEM </h4>
+				<h5> 16 months </h5>
+				<div class="col-sm-9">
+					<h5 class="header-light"> Ruby on Rails, Backbone Js, Oracle,
+						Gilmour Microservices, Google Map API, Location Monitor.
+					</h5>
+					<p>This project is a tracking system for transit trucks
+						that enables the monitoring of cargo and vehicles
+						through a GPS device and associated electronic locks
+						to ensure the integrity of the shipment while
+						travelling through the country from the time of entry
+						till it exits the right designating border points. The
+						system provide the capability to track transit trucks
+						from border to border and notify of any violations to
+						make sure it will maintain the planned course and
+						secure the cargo while in the country.
+					</p>
+					<p class="header-light">Roles and Responsibilities<br>
+						<ul>
+							<li>Design and development of web
+								application software components
+								including both backend and frontend
+								code.
+							</li>
+							<li>Understanding and analyzing client
+								requirements and propose technical
+								solutions for the requirements.
+							</li>
+							<li>Analyzes, maintains and implements
+								(including performance tuning)
+								software applications and develops
+								programming specifications from
+								business requirements.
+							</li>
+							<li>Promotes automation,standardization, 
+								best practices and code reuse for the application
+								development.
+							</li>
+							<li>Deployment on Cloud services.</li>
+						</ul>
+					</p>
+				</div>
 			</div>
-		</div>
-		<div class="col-sm-offset-3 col-sm-9">
-			<h4 class="header-light">Essential Med: Medical & Health Insurance</h4>
-			<h5>6 months</h5>
-			<h5 class="header-light"> Ruby on Rails, Angularjs, jQuery, Ruby, Javascript,Postgres, Bootstrap.
-			</h5>
-			<p>The main objective of this project is to automate the
-				existing system of manually providing insurance
-				cover. It is used by the users to get the suitable cover
-				based on the budget provided by the user. Policy
-				registration can also be done.
-			</p>
-				<p class="header-light">Roles and Responsibilities<br>
-					<ul>
-						<li>Design and development of web
-							application software components
-							including both backend and frontend code.
-						</li>
-						<li>
-							Understanding and analyzing client
-							requirements and propose technical
-							solutions for the requirements.
-						</li>
-						<li>
-							Deployment on Cloud services.
-						</li>
-					</ul>
+			<div class="col-sm-offset-3 col-sm-9">
+				<h4 class="header-light">Essential Med: Medical & Health Insurance</h4>
+				<h5>6 months</h5>
+				<h5 class="header-light"> Ruby on Rails, Angularjs, jQuery, Ruby, Javascript,Postgres, Bootstrap.
+				</h5>
+				<p>The main objective of this project is to automate the
+					existing system of manually providing insurance
+					cover. It is used by the users to get the suitable cover
+					based on the budget provided by the user. Policy
+					registration can also be done.
 				</p>
-		</div>
-		<div class="col-sm-offset-3 col-sm-9">
-			<h4 class="header-light">Essential Med: Doctor Search Application</h4>
-			<h5>6 months</h5>
-			<h5>Ruby on Rails, Angularjs, jQuery, Ruby, Javascript, Postgres, Bootstrap.</h5>
-			<p>Objective of this project is to search a doctor
-				(Dentist, General Practitioner) based on its Location
-				on the Map. User can apply various filter of Country,
-				City, Doctor Name, Practice Number to search for
-				the Doctor. Data for the doctors is uploaded through
-				CSV and then populated in the database and on
-				Google Map.
-			</p>
-				<p class="header-light">Roles and Responsibilities<br>
-					<ul>
-						<li>Design and development of web
-							application software components
-							including both backend and frontend code.
-						</li>
-						<li>
-							Understanding and analyzing client
-							requirements and propose technical
-							solutions for the requirements.
-						</li>
-						<li>
-							Deployment on Cloud services.
-						</li>
-					</ul>
+					<p class="header-light">Roles and Responsibilities<br>
+						<ul>
+							<li>Design and development of web
+								application software components
+								including both backend and frontend code.
+							</li>
+							<li>
+								Understanding and analyzing client
+								requirements and propose technical
+								solutions for the requirements.
+							</li>
+							<li>
+								Deployment on Cloud services.
+							</li>
+						</ul>
+					</p>
+			</div>
+			<div class="col-sm-offset-3 col-sm-9">
+				<h4 class="header-light">Essential Med: Doctor Search Application</h4>
+				<h5>6 months</h5>
+				<h5>Ruby on Rails, Angularjs, jQuery, Ruby, Javascript, Postgres, Bootstrap.</h5>
+				<p>Objective of this project is to search a doctor
+					(Dentist, General Practitioner) based on its Location
+					on the Map. User can apply various filter of Country,
+					City, Doctor Name, Practice Number to search for
+					the Doctor. Data for the doctors is uploaded through
+					CSV and then populated in the database and on
+					Google Map.
 				</p>
-		</div>
-		<div class="col-sm-offset-3 col-sm-9">
-			<h4 class="header-light">Bravo TV</h4>
-			<h5>6 months</h5>
-			<h5 class="header-light"> Automation and Manual Testing </h5>
-			<p>Bravo is an American cable and satellite television
-					channel owned by NBC universal. It’s mainly
-					focused on programs regarding fine arts and
-					currently broadcasts reality shows. They have their
-					website originally in drupal 6 (content management
-					system) and now migrating the same in drupal 7.
-					Testing activities involved are manual testing of
-					behaviour of the website for ex. daily dish and cast
-					blog pages functionality, testing of playlists, social
-					sharing functionality, testing of various features and
-					UI of the website.
-			</p>
-				<p class="header-light">Roles and Responsibilities<br>
-					<ul>
-						<li>Writing automated test cases using
-							selenium web driver.
-						</li>
-						<li>
-							Writing and execution of manual test
-							cases for various functionality.
-						</li>
-						<li>
-							Performing UI, Functional and
-							Regression Testing.
-						</li>
-						<li>
-							Reporting, tracking and closure of
-							defects in Jira.
-						</li>
-					</ul>
+					<p class="header-light">Roles and Responsibilities<br>
+						<ul>
+							<li>Design and development of web
+								application software components
+								including both backend and frontend code.
+							</li>
+							<li>
+								Understanding and analyzing client
+								requirements and propose technical
+								solutions for the requirements.
+							</li>
+							<li>
+								Deployment on Cloud services.
+							</li>
+						</ul>
+					</p>
+			</div>
+			<div class="col-sm-offset-3 col-sm-9">
+				<h4 class="header-light">Bravo TV</h4>
+				<h5>6 months</h5>
+				<h5 class="header-light"> Automation and Manual Testing </h5>
+				<p>Bravo is an American cable and satellite television
+						channel owned by NBC universal. It’s mainly
+						focused on programs regarding fine arts and
+						currently broadcasts reality shows. They have their
+						website originally in drupal 6 (content management
+						system) and now migrating the same in drupal 7.
+						Testing activities involved are manual testing of
+						behaviour of the website for ex. daily dish and cast
+						blog pages functionality, testing of playlists, social
+						sharing functionality, testing of various features and
+						UI of the website.
 				</p>
+					<p class="header-light">Roles and Responsibilities<br>
+						<ul>
+							<li>Writing automated test cases using
+								selenium web driver.
+							</li>
+							<li>
+								Writing and execution of manual test
+								cases for various functionality.
+							</li>
+							<li>
+								Performing UI, Functional and
+								Regression Testing.
+							</li>
+							<li>
+								Reporting, tracking and closure of
+								defects in Jira.
+							</li>
+						</ul>
+					</p>
+			</div>
 		</div>
 	</div>
 	<script src="bower_components/jquery/dist/jquery.min.js" type="text/javascript" charset="utf-8"></script>
