Added css changes

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 					<img src="image/my-pic.jpg" alt="Profile Picture" class="img-responsive display-pic"></img>
 				</div>
 				<div class="col-sm-10 hidden-xs">
-					<h1 class="main-heading" style="color: black"> Kalyani Kirad</h1>
-					<h3 class="sub-heading" style="color: black"> Full Stack Web Developer </h3>
+					<h1 class="main-heading"> Kalyani Kirad</h1>
+					<h3 class="sub-heading"> Full Stack Web Developer </h3>
 					<div class="row">
 						<div class="col-sm-10 hidden-xs social-icons">
 							<a href="https://www.facebook.com/kalyani.kirad">
