changed profile pic

--- a/index.html
+++ b/index.html
@@ -96,6 +96,31 @@
 			</div>
 		</div>
 		<hr>
+		<div class="row">
+			<h1> PROFESSIONAL SUMMARY</h1>
+			<div class="col-sm-6">
+				<ul>
+					<li><p>Quick learner, result oriented, adaptability and possessing inner drive to complete tasks effectively and efficiently with 4 .5 years of working in software development.</p></li><br>
+					<li><p>
+						ROR Developer with expertise in all aspects of the software development life cycle, including requirements analysis, design, development and production support.
+					</p></li><br>
+					<li><p>
+						Provide project management for project activities to ensure that the project is completed on time.
+					</p></li><br>
+					<li><p>
+						Experience in Regression Testing, Sanity Testing and developing Automation Frameworks Based on Selenium (Web Driver).
+					</p></li><br>
+					<li><p>
+						Experience in working on AWS Competency.
+					</p></li><br>
+					<li><p>
+						Good verbal and written communication skills, attention to detail and ability to work in a time-sensitive environment.
+					</p></li><br>
+					<li><p>Pursuing MBA in IT Project Management from Welingkar Institute Mumbai.</p></li>
+				</ul>
+			</div>
+		</div>
+		<hr>
 		<div>
 			<h1>SKILL SET</h1>
 			<div class="row">
